--- a/confusion/package.json
+++ b/confusion/package.json
@@ -13,6 +13,7 @@
     "react-redux-form": "^1.16.8",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
+    "react-transition-group": "^2.3.0",
     "reactstrap": "^7.1.0",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
